config/podzone-opensearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-opensearch-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: podzone-ingress-class
  tls:
  - hosts:
    - opensearch.southern.podzone.net
    secretName: dashboard-cert
  rules:
  - host: opensearch.southern.podzone.net
    http:
      paths:
      - backend:
          service:
            name: dashboards-opensearch-dashboards
            port:
              number: 5601
        path: /
        pathType: Prefix
